@@ -1,4 +1,4 @@
-/* $OpenBSD: clientloop.c,v 1.186 2008/01/19 20:48:53 djm Exp $ */
+/* $OpenBSD: clientloop.c,v 1.187 2008/01/23 01:56:54 dtucker Exp $ */
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
  * Copyright (c) 1995 Tatu Ylonen <ylo@cs.hut.fi>, Espoo, Finland
@@ -462,12 +462,6 @@ client_check_window_change(void)
 		packet_put_int((u_int)ws.ws_ypixel);
 		packet_send();
 	}
-}
-
-static void
-client_global_keepalive(int type, u_int32_t seq, void *ctxt)
-{
-	server_alive_timeouts = 0;
 }
 
 static void
@@ -2083,8 +2077,6 @@ client_init_dispatch_20(void)
 	/* global request reply messages */
 	dispatch_set(SSH2_MSG_REQUEST_FAILURE, &client_global_request_reply);
 	dispatch_set(SSH2_MSG_REQUEST_SUCCESS, &client_global_request_reply);
-	dispatch_set(SSH2_MSG_IGNORE, &client_global_keepalive);
-	dispatch_set(SSH2_MSG_UNIMPLEMENTED, &client_global_keepalive);
 }
 static void
 client_init_dispatch_13(void)
